--- a/blog.html
+++ b/blog.html
@@ -17,6 +17,7 @@
             <h1> Este es el titulo atractivo e interesante del post  </h1>
             <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles 
         que se pueden hacer con ramas muy complicadas pero satisfactorias</p>
+        <p><img src="Imagenes/imagen1.jpg" alt=""></p>
         <p>Vamos progresando muy bien </p>
 
 
